# nhs-eps-spine-client

./: .gitallowed  .gitignore  .npmrc  .pre-commit-config.yaml  .tool-versions  Makefile  README.md  package-lock.json  package.json  pyproject.toml  release.config.cjs  sonar-project.properties  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  pr_link.yml  pr_title_check.yml  pull_request.yml  quality_checks.yml  release.yml
.sbom/: sbom.dev.cdx.json
lib/: index.d.ts  index.js  index.js.map  live-spine-client.d.ts  live-spine-client.js  live-spine-client.js.map  sandbox-spine-client.d.ts  sandbox-spine-client.js  sandbox-spine-client.js.map  spine-client.d.ts  spine-client.js  spine-client.js.map  status.d.ts  status.js  status.js.map  utils.d.ts  utils.js  utils.js.map
lib/resources/: clinical_content_view.d.ts  clinical_content_view.js  clinical_content_view.js.map  clinical_content_view_sandbox.d.ts  clinical_content_view_sandbox.js  clinical_content_view_sandbox.js.map  prescription_search.d.ts  prescription_search.js  prescription_search.js.map  prescription_search_sandbox.d.ts  prescription_search_sandbox.js  prescription_search_sandbox.js.map
release_notes/: v2.1.82.md  v2.1.83.md  v2.1.84.md  v2.1.85.md  v2.1.89.md  v2.1.90.md  v2.1.91.md
src/: live-spine-client.ts  sandbox-spine-client.ts  spine-client.ts  utils.ts
src/resources/: clinical_content_view.mustache  (+6 more)
tests/: clinicalView.test.ts  getPrescriptions.test.ts  live-spine-client.test.ts  prescriptonSearch.test.ts
