[project]
python = "^3.14"
name = "nhs-eps-spine-client"

[tool.poetry]
name = "nhs-eps-spine-client"
description = "NHS EPS Spine Client"
version = "0.0.1-alpha"
authors = [
  "EPS Team <eps_team@nhs.net>",
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/NHSDigital/nhs-eps-spine-client"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"

[tool.poetry.dev-dependencies]
pip-licenses = "^5.5.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
